# aoc-cpp-template

./: CMakeLists.txt  README.md
src/day01/: main.cpp
src/day02/: main.cpp
src/day03/: CMakeLists.txt  main.cpp
src/day04/: main.cpp
src/day05/: main.cpp
src/day06/: main.cpp
src/day07/: main.cpp
src/day08/: main.cpp
src/day09/: main.cpp
src/day10/: main.cpp
src/day11/: main.cpp
src/day12/: main.cpp
src/day13/: main.cpp
src/day14/: main.cpp
src/day15/: main.cpp
src/day16/: main.cpp
src/day17/: main.cpp
src/day18/: main.cpp
src/day19/: main.cpp
src/day20/: main.cpp
src/day21/: main.cpp
src/day22/: main.cpp
src/day23/: main.cpp
src/day24/: main.cpp
src/day25/: main.cpp
