cmake_minimum_required(VERSION 3.28)
project(aoc[YEAR])
set(CMAKE_CXX_STANDARD 23)

function(configure_input_file PATH)
    file(READ ${PATH} INPUT_FILE)
    string(STRIP "${INPUT_FILE}" INPUT_FILE)
    if ("${INPUT_FILE}" STREQUAL "")
        message(FATAL_ERROR "empty input file: ${PATH}")
    else ()
        configure_file(${PATH} ${CMAKE_CURRENT_BINARY_DIR} NO_SOURCE_PERMISSIONS COPYONLY)
    endif ()
endfunction()

add_subdirectory(src/day01)
add_subdirectory(src/day02)
add_subdirectory(src/day03)
add_subdirectory(src/day04)
add_subdirectory(src/day05)
add_subdirectory(src/day06)
add_subdirectory(src/day07)
add_subdirectory(src/day08)
add_subdirectory(src/day09)
add_subdirectory(src/day10)
add_subdirectory(src/day11)
add_subdirectory(src/day12)
add_subdirectory(src/day13)
add_subdirectory(src/day14)
add_subdirectory(src/day15)
add_subdirectory(src/day16)
add_subdirectory(src/day17)
add_subdirectory(src/day18)
add_subdirectory(src/day19)
add_subdirectory(src/day20)
add_subdirectory(src/day21)
add_subdirectory(src/day22)
add_subdirectory(src/day23)
add_subdirectory(src/day24)
add_subdirectory(src/day25)
